--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,161 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Copy Page Assignment</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-  <h1>Finish Me!</h1>
+  <div class="topBar">
+    <a>
+      <i class="glyphicon glyphicon-apple"></i>
+    </a>
+    <a class="active">Mac</a>
+    <a>iPad</a>
+    <a>iPhone</a>
+    <a>Watch</a>
+    <a>TV</a>
+    <a>Music</a>
+    <a>Support</a>
+    <a>
+      <span class="material-icons">search</span>
+    </a>
+    <a>
+      <span class="material-icons">shopping_bag</span>
+    </a>
+  </div>
+  <div class="macbookPro">
+    <h1>MacBook Pro</h1>
+    <div>
+      <a class="overviewMacOS">Overview</a>
+      <a class="overviewMacOS">macOS</a>
+      <a class="active">Tech Specs</a>
+      <a class="buy">Buy</a>
+    </div>
+  </div>
+  <hr />
+  <div class="buttons">
+    <button class="active">13-inch</button>
+    <button>15-inch</button>
+  </div>
+  <hr />
+  <div class="imgTouchBar">
+    <img src="../src/img/touchbar13_mbp_large_2x.jpg" alt="touchbar 13">
+  </div>
+  <hr />
+  <div class="touchBar">
+    <h1>Touch Bar</h1>
+    <p>Touch Bar with integrated Touch ID sensor</p>
+  </div>
+  <hr />
+  <div class="price">
+    <h1>Price</h1>
+    <div>
+      <p>$1299</p>
+      <p>$1499</p>
+      <p>$1799</p>
+      <p>$1999</p>
+    </div>
+  </div>
+  <hr />
+  <div class="finish">
+    <h1>Finish</h1>
+    <div class="imgFinish">
+      <img src="../src/img/finish_lockup_mbp13_large_2x.jpg" alt="finish lockup">
+      <div class=finishCaption>
+        <p>Silver </p>
+        <p>Space Gray</p>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="display">
+    <h1>Display</h1>
+    <div>
+      <h2>Retina Display</h2>
+      <p>13.3-inch (diagonal) LED-backlit display with IPS technology; 2560-by-1600 native resolution at 227 pixels
+        per inch with support for millions of colors
+      </p>
+      <p>Supported scaled resolutions:
+      <ul>
+        <li>1680 by 1050</li>
+        <li>1440 by 900</li>
+        <li>1024 by 640</li>
+      </ul>
+      <p>500 nits brightness</p>
+      <p>Wide color (P3)</p>
+      <p>True Tone technology</p>
+      </p>
+    </div>
+  </div>
+  <hr />
+  <div class="processor">
+    <h1>Processor</h1>
+    <div class="pDiv">
+      <div>
+        <p>1.4GHz quad-core Intel Core i5, Turbo Boost up to 3.9GHz, with 128MB of eDRAM
+        <p>
+          Configurable to 1.7GHz quad-core Intel Core i7, Turbo Boost up to 4.5GHz, with 128MB of eDRAM
+        </p>
+        </p>
+      </div>
+      <div>
+        <p>
+          2.4GHz quad-core Intel Core i5, Turbo Boost up to 4.1GHz, with 128MB of eDRAM
+        <p>
+          Configurable to 2.8GHz quad-core Intel Core i7, Turbo Boost up to 4.7GHz, with 128MB of eDRAM
+        </p>
+        </p>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="storage">
+    <h1>Storage</h1>
+    <div class="sDiv">
+      <div>
+        <button class="orangeBlock">128GB</button>
+        <p>128GB SSD</p>
+        <p>Configurable to 256GB, 512GB, 1TB, or 2TB SSD</p>
+      </div>
+      <div>
+        <button class="orangeBlock">256GB</button>
+        <p>256GB SSD</p>
+        <p>Configurable to 512GB, 1TB, or 2TB SSD</p>
+      </div>
+      <div>
+        <button class="orangeBlock">256GB</button>
+        <p>256GB SSD</p>
+        <p>Configurable to 512GB, 1TB, or 2TB SSD</p>
+      </div>
+      <div>
+        <button class="orangeBlock">512GB</button>
+        <p>512GB SSD</p>
+        <p>Configurable to 1TB or 2TB SSD</p>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="memory">
+    <h1>Memory</h1>
+    <div>
+      <button class="orangeBlock">8GB</button>
+      <p>8GB of 2133MHz LPDDR3 onboard memory</p>
+      <p>Configurable to 16GB of memory</p>
+    </div>
+  </div>
+  <hr />
+  <div class="graphics">
+    <h1>Graphics</h1>
+    <div>
+      <p class="graphicsP">Intel Iris Plus Graphics 645</p>
+      <p>Intel Iris Plus Graphics 655</p>
+    </div>
+  </div>
 </body>
 
 </html>
